--- a/index.html
+++ b/index.html
@@ -127,12 +127,29 @@
 										</ul>
 									</article>
 
+									<article>
+										<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.png" alt="" /></a>
+										<h3>Smoking Dataset in UK</h3>
+										<p>The Power BI report examines a UK smoking dataset that closely resembles the UK adult population. It shows a slight gender imbalance, with most participants being married or single, having diverse education levels, and being predominantly White. Importantly, a significant majority of the sample are non-smokers, highlighting the need to consider sample composition when interpreting smoking behavior data. </p>
+										<ul class="actions">
+											<li><a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="button">VIEW PROJECT</a></li>
+										</ul>
+									</article>
+
 		<article>
 			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="image"><img src="images/H.png" alt="" /></a>
 			<h3>HR ANALYTICS DASHBOARD</h3>
 			<p>I employed Tableau software to examine the HR dataset, generating multiple calculated columns utilizing various formulae. Additionally, I implemented a formula to set the bin size for my bar chart, enabling it to increase by one each time. To make it easily comprehensible to non-technical stakeholders, I utilized appropriate charts to visualize the data, which require no further explanations</p>
 			<ul class="actions">
 				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="button">View my project</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://www.novypro.com/project/kms-dashboard" class="image"><img src="images/pic04.png" alt="" /></a>
+			<h3>KMS SALE DASHBOARD WITH THE USE OF POWERBI</h3>
+			<p> This is a sample of my Power BI dashboard created during bootcamp with lighthall.co bootcamp</p>
+			<ul class="actions">
+				<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">View my project</a></li>
 			</ul>
 		</article>
 		<article>
@@ -159,14 +176,7 @@
 				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/SalesDashboard_16746537586560/Dashboard1" class="button">View my project</a></li>
 			</ul>
 		</article>
-		<article>
-			<a href="https://www.novypro.com/project/kms-dashboard" class="image"><img src="images/pic04.png" alt="" /></a>
-			<h3>KMS SALE DASHBOARD WITH THE USE OF POWERBI</h3>
-			<p> This is a sample of my Power BI dashboard created during bootcamp with lighthall.co bootcamp</p>
-			<ul class="actions">
-				<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">View my project</a></li>
-			</ul>
-		</article>
+		
 		<article>
 			<a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="image"><img src="images/pic05.png" alt="" /></a>
 			<h3>TATA ONLINE RETAIL WITH USE OF POWERBI</h3>
@@ -212,14 +222,7 @@
 											<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/CovidCasesandDeathsWorldWide/Dashboard1" class="button">View my project</a></li>
 										</ul>
 									</article>
-									<article>
-										<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.png" alt="" /></a>
-										<h3>Smoking Dataset in UK</h3>
-										<p>The Power BI report focuses on the smoking dataset in the UK and utilizes various charts to visually represent the data. The dataset closely resembles the UK adult population to some extent. There is a slightly higher proportion of females compared to males within the sample. The majority of participants are married (48%) or single (25.35%). Education-wise, participants either have no formal qualifications (34.65%), have completed GSCE/0 level education (18.21%), or possess higher qualifications such as degrees (15.49%). The ethnic composition of the sample predominantly consists of White individuals (92%), exceeding the proportion reported in the 2021 Census (80%). A significant majority of the sample (three-quarters) does not engage in smoking behaviors, indicating an imbalance in this aspect. The collected sample provides valuable insights into the demographics and exhibits similarities to the UK adult population. The gender distribution suggests a modest gender imbalance, with slightly more females represented. Marital status reveals that a majority are married, followed by single individuals. The educational qualifications showcase a notable portion without formal qualifications, a significant percentage with GSCE/0 level education, and a considerable proportion with higher qualifications. The ethnic composition largely aligns with the White population. Notably, the distribution of smoking behaviors within the sample indicates a substantial majority of non-smokers. These insights underscore the importance of considering the sample composition when interpreting findings related to smoking behaviors. </p>
-										<ul class="actions">
-											<li><a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="button">VIEW PROJECT</a></li>
-										</ul>
-									</article>
+									
 									</div>
 								</section>
 
